--- a/ChocolateyExplorer.WPF/App.xaml
+++ b/ChocolateyExplorer.WPF/App.xaml
@@ -7,37 +7,51 @@
                 </ResourceDictionary>
                 <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
                 <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Light.xaml"/>
-                <ResourceDictionary>
-                    <!--<Style TargetType="{x:Type Button}">
-                        <Setter Property="Padding" Value="10"/>
-                        <Setter Property="Margin" Value="5"/>
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+            <Style TargetType="{x:Type Button}" x:Key="ToolbarButton">
+                <Setter Property="Padding" Value="9"/>
+                <Setter Property="Margin" Value="5"/>
+            </Style>
+            <Style TargetType="{x:Type Label}" x:Key="Title">
+                <Setter Property="FontWeight" Value="Bold"/>
+            </Style>
+            <Style TargetType="{x:Type TextBlock}" x:Key="Description">
+                <Setter Property="Padding" Value="3"/>
+                <Setter Property="Margin" Value="5"/>
+            </Style>
+            <Style TargetType="{x:Type StatusBar}">
+                <Setter Property="Background" Value="Transparent" />
+                <Style.Resources>
+                    <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+                        <Setter Property="FontWeight" Value="Bold"/>
+                        <Setter Property="Padding" Value="5"/>
                     </Style>
-                    <Style TargetType="{x:Type TextBox}">
-                        <Setter Property="Padding" Value="3"/>
-                        <Setter Property="Margin" Value="5"/>
+                    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+                        <Setter Property="Padding" Value="2" />
                     </Style>
-                    <Style TargetType="{x:Type CheckBox}">
-                        <Setter Property="Padding" Value="3"/>
-                        <Setter Property="Margin" Value="5"/>
-                    </Style>
-                    <Style TargetType="{x:Type Label}">
-                        <Setter Property="Padding" Value="3"/>
-                        <Setter Property="Margin" Value="5"/>
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                    </Style>-->
-                    <Style TargetType="{x:Type Button}" x:Key="ToolbarButton">
-                        <Setter Property="Padding" Value="9"/>
-                        <Setter Property="Margin" Value="5"/>
-                    </Style>
-                    <Style TargetType="{x:Type Label}" x:Key="Title">
+                </Style.Resources>
+            </Style>
+            <Style TargetType="{x:Type StackPanel}" x:Key="Form">
+                <Setter Property="Orientation" Value="Horizontal" />
+                <Setter Property="Margin" Value="0,0,0,4" />
+                <Style.Resources>
+                    <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+                        <Setter Property="Width" Value="100" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
                         <Setter Property="FontWeight" Value="Bold"/>
                     </Style>
-                    <Style TargetType="{x:Type TextBlock}" x:Key="Description">
-                        <Setter Property="Padding" Value="3"/>
-                        <Setter Property="Margin" Value="5"/>
+                    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                        <Setter Property="Width" Value="180" />
                     </Style>
-                </ResourceDictionary>
-            </ResourceDictionary.MergedDictionaries>
+                    <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
+                        <Setter Property="Padding" Value="0,3" />
+                    </Style>
+                </Style.Resources>
+            </Style>
+            <PathGeometry x:Key="MagnifyIconData">F1 M 42.5,22C 49.4036,22 55,27.5964 55,34.5C 55,41.4036 49.4036,47 42.5,47C 40.1356,47 37.9245,46.3435 36,45.2426L 26.9749,54.2678C 25.8033,55.4393 23.9038,55.4393 22.7322,54.2678C 21.5607,53.0962 21.5607,51.1967 22.7322,50.0251L 31.7971,40.961C 30.6565,39.0755 30,36.8644 30,34.5C 30,27.5964 35.5964,22 42.5,22 Z M 42.5,26C 37.8056,26 34,29.8056 34,34.5C 34,39.1944 37.8056,43 42.5,43C 47.1944,43 51,39.1944 51,34.5C 51,29.8056 47.1944,26 42.5,26 Z</PathGeometry>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
