--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -68,15 +68,39 @@
                 </TreeView.ItemTemplate>
             </TreeView>
             <ScrollViewer Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="0,0,5,0">
-                <StackPanel >
-                    <Label Content="Id" Style="{DynamicResource Title}" />
-                    <Label Content="{Binding SelectedPackage.Id}"/>
-                    <Label Content="Title" Style="{DynamicResource Title}" />
-                    <Label Content="{Binding SelectedPackage.Title}"/>
-                    <Label Content="Version" Style="{DynamicResource Title}" />
-                    <Label Content="{Binding SelectedPackage.Version}"/>
+                <StackPanel Style="{StaticResource StackedInformation}" Orientation="Vertical">
+                    <StackPanel>
+                        <Label Content="Id" Style="{DynamicResource Title}" />
+                        <Label Content="{Binding SelectedPackage.Id}"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Content="Title" Style="{DynamicResource Title}" />
+                        <Label Content="{Binding SelectedPackage.Title}"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Content="Version" Style="{DynamicResource Title}" />
+                        <Label Content="{Binding SelectedPackage.Version}"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Content="Download Count" Style="{DynamicResource Title}" />
+                        <Label Content="{Binding SelectedPackage.DownloadCount}"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Content="Author" Style="{DynamicResource Title}" />
+                        <Label Content="{Binding SelectedPackage.Author}"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <Label Content="Project Link" Style="{DynamicResource Title}" />
+                        <Label>
+                            <Hyperlink NavigateUri="{Binding SelectedPackage.ProjectLink}" RequestNavigate="Hyperlink_RequestNavigate" >
+                                <Label Content="{Binding SelectedPackage.ProjectLink}" />
+                            </Hyperlink>
+                        </Label>
+                    </StackPanel>
                     <Label Content="Description" Style="{DynamicResource Title}" />
                     <TextBlock Text="{Binding SelectedPackage.Description}" TextWrapping="Wrap" Style="{DynamicResource Description}" />
+                    <Label Content="Release Notes" Style="{DynamicResource Title}" />
+                    <TextBlock Text="{Binding SelectedPackage.ReleaseNotes}" TextWrapping="Wrap" Style="{DynamicResource Description}" />
                     <Button Content="Install" Command="{Binding InstallPackageCommand}" CommandParameter="{Binding SelectedPackage}" Margin="0,10,0,10" />
                 </StackPanel>
             </ScrollViewer>
