Adding buttons to Add and Remove sources

--- a/ChocolateyExplorer.WPF/App.xaml
+++ b/ChocolateyExplorer.WPF/App.xaml
@@ -59,6 +59,12 @@
                 </Style.Resources>
             </Style>
             <PathGeometry x:Key="MagnifyIconData">F1 M 42.5,22C 49.4036,22 55,27.5964 55,34.5C 55,41.4036 49.4036,47 42.5,47C 40.1356,47 37.9245,46.3435 36,45.2426L 26.9749,54.2678C 25.8033,55.4393 23.9038,55.4393 22.7322,54.2678C 21.5607,53.0962 21.5607,51.1967 22.7322,50.0251L 31.7971,40.961C 30.6565,39.0755 30,36.8644 30,34.5C 30,27.5964 35.5964,22 42.5,22 Z M 42.5,26C 37.8056,26 34,29.8056 34,34.5C 34,39.1944 37.8056,43 42.5,43C 47.1944,43 51,39.1944 51,34.5C 51,29.8056 47.1944,26 42.5,26 Z</PathGeometry>
+            <PathGeometry x:Key="AddIconData">
+                F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z
+            </PathGeometry>
+            <PathGeometry x:Key="MinusIconData">
+                F1 M 19,38L 57,38L 57,44L 19,44L 19,38 Z
+            </PathGeometry>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
