--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -28,7 +28,8 @@
                     <div class="inner">
                         <h3 class="masthead-brand">Chocolatey Explorer</h3>
                         <ul class="nav masthead-nav">
-                            <li><a data-scroll-to="#features">Features</a></li>
+                            <li><a href="#features" data-scroll-to="#features">Features</a></li>
+                            <li><a href="#screenshots" data-scroll-to="#screenshots">Screenshots</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,6 +93,28 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row" id="screenshots">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <div class="page-header">
+                                <h2>Screenshots</h2>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <a href="#screenshots" class="thumbnail" title="Sources">
+                                <img src="~/Content/ChocolateyExplorerSourcesView.PNG" alt="Sources" />
+                            </a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <a href="#screenshots" class="thumbnail" title="Installed Packages">
+                                <img src="~/Content/ChocolateyExplorerInstalledPackagesView.PNG" alt="Installed Packages" />
+                            </a>
+                        </div>
+                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+                            <a href="#screenshots" class="thumbnail" title="Manage Installed Packages">
+                                <img src="~/Content/ChocolateyExplorerUpdateUninstall.PNG" alt="Manage Installed Packages" />
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="mastfoot">
                     <div class="inner">
@@ -99,7 +122,7 @@
                             Cover template for <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>.
                             Copyright &copy; @DateTime.Now.Year <a href="http://www.jdibble.co.uk" target="_blank">James Dibble</a>.
                             All rights reserved
-                            <a data-scroll-to="html">Back to Top</a>
+                            <a data-scroll-to="html" href="#">Back to Top</a>
                         </p>
                     </div>
                 </div>
