Adding some extra SEO stuffs

--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -15,6 +15,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Chocolatey Explorer is a GUI to make Chocolatey that little bit more awesome." />
     <title>Chocolatey Explorer - A GUI to make Chocolatey more awesome</title>
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" rel="stylesheet" />
     <link href="~/content/style/theme.min.css" rel="stylesheet" />
@@ -36,7 +37,7 @@
                 <div class="inner cover">
                     <h1 class="cover-heading">Chocolatey Explorer</h1>
                     <p class="lead">
-                        Chocolatey Explorer is an application to make <a href="http://chocolatey.org" target="_blank">Chocolatey</a> that little bit more awesome
+                        Chocolatey Explorer is a GUI to make <a href="http://chocolatey.org" target="_blank">Chocolatey</a> that little bit more awesome
                         by giving you control over it's basic functions without having to break out PowerShell.
                     </p>
                     <p class="lead">
