Fixing validation errors

--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -13,8 +13,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Chocolatey Explorer is a GUI to make Chocolatey that little bit more awesome." />
     <title>Chocolatey Explorer - A GUI to make Chocolatey more awesome</title>
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" rel="stylesheet" />
