Load packages from cache and don't allow paging whilst there are search results.  Limit search to min 3 charachters to prevent huge list coming back

--- a/ChocolateyExplorer.WPF/Views/Packages.xaml
+++ b/ChocolateyExplorer.WPF/Views/Packages.xaml
@@ -23,6 +23,7 @@
                 </TextBox.InputBindings>
             </TextBox>
             <mui:ModernButton Content="SEARCH" IconData="{StaticResource MagnifyIconData}" Command="{Binding SearchPackagesCommand}" />
+            <mui:ModernButton Content="Clear Search Results" IconData="{StaticResource RemoveIconData}" Command="{Binding ClearSearchResultsCommand}" Visibility="{Binding HasSearchResults, Converter={StaticResource BooleanToVisibilityConverter}}" />
         </StatusBar>
         <ViewModel:Console DockPanel.Dock="Bottom" Height="200" />
         <StatusBar DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Style="{DynamicResource ResourceKey=StatusBar}" Background="{x:Null}">
