--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -106,11 +106,16 @@
                             </a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <a href="/Content/ChocolateyExplorerSourcesView.PNG" class="thumbnail" title="Search Packages">
+                                <img src="~/Content/ChocolateyExplorerSearch.PNG" alt="Search" />
+                            </a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <a href="~/Content/ChocolateyExplorerInstalledPackagesView.PNG" class="thumbnail" title="Installed Packages">
                                 <img src="~/Content/ChocolateyExplorerInstalledPackagesView.PNG" alt="Installed Packages" />
                             </a>
                         </div>
-                        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <a href="~/Content/ChocolateyExplorerUpdateUninstall.PNG" class="thumbnail" title="Manage Installed Packages">
                                 <img src="~/Content/ChocolateyExplorerUpdateUninstall.PNG" alt="Manage Installed Packages" />
                             </a>
